--- a/theme.css
+++ b/theme.css
@@ -10,16 +10,30 @@
  */
 @import url(https://capnkitten.github.io/BetterDiscord/Themes/Material-Discord/css/source.css);
 .theme-dark {
-  --accent-hue: 14deg;
+  --main-color: #100f0e;
+  --main-alt: #171615;
+  --message-color: #171615;
+  --message-color-hover: #1e1d1c;
+  --accent-hue: 15deg;
   --accent-saturation: 100%;
-  --accent-lightness: 86%;
-  --accent-text-color: #BF360C; }
+  --accent-lightness: 85%;
+  --accent-text-color: #994328;
+  --popout-color: #141312;
+  --main-textarea-color: #171615;
+  --tooltip-color: #171615; }
 
 .theme-light {
-  --accent-hue: 14deg;
+  --main-color: #100f0e;
+  --main-alt: #171615;
+  --message-color: #171615;
+  --message-color-hover: #1e1d1c;
+  --accent-hue: 15deg;
   --accent-saturation: 100%;
-  --accent-lightness: 84%;
-  --accent-text-color: #BF360C; }
+  --accent-lightness: 85%;
+  --accent-text-color: #994328;
+  --popout-color: #141312;
+  --main-textarea-color: #171615;
+  --tooltip-color: #171615; }
 
 [data-list-item-id="guildsnav___488281306757595147"][class*="wrapper__"] [class*="icon__"] {
   border: 2px solid #FF7043;
