--- a/theme.css
+++ b/theme.css
@@ -23,17 +23,10 @@
   --tooltip-color: #171615; }
 
 .theme-light {
-  --main-color: #100f0e;
-  --main-alt: #171615;
-  --message-color: #171615;
-  --message-color-hover: #1e1d1c;
   --accent-hue: 15deg;
   --accent-saturation: 100%;
   --accent-lightness: 85%;
-  --accent-text-color: #994328;
-  --popout-color: #141312;
-  --main-textarea-color: #171615;
-  --tooltip-color: #171615; }
+  --accent-text-color: #994328; }
 
 [data-list-item-id="guildsnav___488281306757595147"][class*="wrapper__"] [class*="icon__"] {
   border: 2px solid #FF7043;
