--- a/template-noname.scss
+++ b/template-noname.scss
@@ -1,11 +1,12 @@
 .theme-dark {
-    [data-list-item-id="channels___<id>"][aria-label*="channel)"] div[class^="name__"] {
+    [data-list-item-id="channels___<id>"][aria-label*="channel)"] div[class^="name__"],
+    [data-list-item-id="channels___<id>"][aria-label*="канал"] div[class^="name__"] {
         color: <color>;
     }
-}
 
-.theme-dark {
-    [data-list-item-id="channels___<id>"][aria-label*="category"] div[class^="overflow__"] {
+
+    [data-list-item-id="channels___<id>"][aria-label*="category"] div[class^="overflow__"],
+    [data-list-item-id="channels___<id>"][aria-label*="категория"] div[class^="overflow__"] {
         color: <color>;
     }
 }
