--- a/theme.css
+++ b/theme.css
@@ -5,7 +5,7 @@
  * @description Theme for IdeaLight
  * @author mrdan__
  * @authorId 476046299691745300
- * @source ...
+ * @source https://github.com/MrDanikYT-pixel/idealight-theme
  * @invite 2e5SMn73Hw 
  */
 @import url(https://capnkitten.github.io/BetterDiscord/Themes/Material-Discord/css/source.css);
