--- a/default.scss
+++ b/default.scss
@@ -4,7 +4,7 @@
  * @description Theme for IdeaLight
  * @author mrdan__
  * @authorId 476046299691745300
- * @source ...
+ * @source https://github.com/MrDanikYT-pixel/idealight-theme
  * @invite 2e5SMn73Hw 
  */
 
