--- a/default.scss
+++ b/default.scss
@@ -57,3 +57,11 @@
     border: 2px solid #FFEE58;
     box-sizing: border-box;
 }
+
+[data-author-id="1104519187902251130"] [class*="embedWrapper__"] {
+    border: 4px solid;
+}
+
+[data-author-id="1101476120932667432"] [class*="embedWrapper__"] {
+    border: 4px solid;
+}
