--- a/template.scss
+++ b/template.scss
@@ -3,31 +3,39 @@
     $mute_icon_<id>: "data:image/svg+xml,<mute>";
     $lock_icon_<id>: "data:image/svg+xml,<lock>";
 
+    [data-list-item-id="channels___<id>"][aria-label*="channel"], 
+    [data-list-item-id="channels___<id>"][aria-label*="канал"] {
+        [aria-label*="icon"] svg {
+            color: rgba(0, 0, 0, 0);
+            content: "";
+            display: inline-block;
+            background-image: url("#{$svg_channel_<id>}");
+            width: 20px;
+            height: 20px;
+            background-size: contain;
+            position: relative;
+        }
 
-    [data-list-item-id="channels___<id>"][aria-label*="channel)"] [aria-label*="icon"] svg,
-    [data-list-item-id="channels___<id>"][aria-label*="канал"] [aria-label*="icon"] svg {
-        color: rgba(0, 0, 0, 0);
+        svg:not([class*="actionIcon"]) path {
+            display: none;
+        }
+
+        [aria-label*="Limited"]::after, 
+        [aria-label*="ограниченный"]::after {
+            content: "";
+            display: block;
+            background-image: url("#{$lock_icon_<id>}");
+            width: 12px;
+            height: 12px;
+            background-size: contain;
+            position: absolute;
+            top: 0;
+            right: 0;
+            transform: translate(65%, -65%);
+        }
     }
 
-    [data-list-item-id="channels___<id>"][aria-label*="channel)"] svg:not([class*="actionIcon"]) path,
-    [data-list-item-id="channels___<id>"][aria-label*="канал"] svg:not([class*="actionIcon"]) path {
-        display: none;
-    }
-
-
-    [data-list-item-id="channels___<id>"][aria-label*="channel)"] [aria-label*="icon"] svg,
-    [data-list-item-id="channels___<id>"][aria-label*="канал"] [aria-label*="icon"] svg {
-        content: "";
-        display: inline-block;
-        background-image: url("#{$svg_channel_<id>}");
-        width: 20px;
-        height: 20px;
-        background-size: contain;
-        position: relative;
-    }
-
-
-    [class*="modeMuted_"] [data-list-item-id="channels___<id>"][aria-label*="channel)"] [aria-label*="icon"]::before,
+    [class*="modeMuted_"] [data-list-item-id="channels___<id>"][aria-label*="channel"] [aria-label*="icon"]::before, 
     [class*="modeMuted_"] [data-list-item-id="channels___<id>"][aria-label*="канал"] [aria-label*="icon"]::before {
         content: "";
         display: block;
@@ -39,19 +47,5 @@
         top: 0;
         left: 0;
         transform: translate(-65%, -65%);
-    }
-
-    [data-list-item-id="channels___<id>"][aria-label*="channel)"] [aria-label*="Limited"]::after,
-    [data-list-item-id="channels___<id>"][aria-label*="канал"] [aria-label*="ограниченный"]::after {
-        content: "";
-        display: block;
-        background-image: url("#{$lock_icon_<id>}");
-        width: 12px;
-        height: 12px;
-        background-size: contain;
-        position: absolute;
-        top: 0;
-        right: 0;
-        transform: translate(65%, -65%);
     }
 }
