--- a/default.scss
+++ b/default.scss
@@ -65,3 +65,32 @@
 [data-author-id="1101476120932667432"] [class*="embedWrapper__"] {
     border: 4px solid;
 }
+
+// rules
+
+[data-list-item-id*="chat-messages___chat-messages-1015346516807929927"] [class*="embedWrapper__"] [href] span {
+    color: #FFA726;
+}
+
+[data-list-item-id*="chat-messages___chat-messages-1015346516807929927"][class*="cozy_"] {
+    padding: 0px !important;
+}
+
+[data-list-item-id*="chat-messages___chat-messages-1015346516807929927"] [class*="container__"] {
+    padding: 10px !important;
+    grid-row-gap: 10px !important;
+}
+
+[data-list-item-id*="chat-messages___chat-messages-1015346516807929927"] [class*="embedWrapper__"] {
+    border: 4px solid;
+    border-radius: 10px !important;
+}
+
+[data-list-item-id*="chat-messages___chat-messages-1015346516807929927"] {
+    border: 4px solid;
+    border-color: #FFA726;
+}
+
+[data-list-item-id*="chat-messages___chat-messages-1015346516807929927"] [class*="contents_"] {
+    display: none;
+}
