--- a/theme.css
+++ b/theme.css
@@ -62,6 +62,33 @@
   border: 4px solid;
 }
 
+[data-list-item-id*="chat-messages___chat-messages-1015346516807929927"] [class*="embedWrapper__"] [href] span {
+  color: #FFA726;
+}
+
+[data-list-item-id*="chat-messages___chat-messages-1015346516807929927"][class*="cozy_"] {
+  padding: 0px !important;
+}
+
+[data-list-item-id*="chat-messages___chat-messages-1015346516807929927"] [class*="container__"] {
+  padding: 10px !important;
+  grid-row-gap: 10px !important;
+}
+
+[data-list-item-id*="chat-messages___chat-messages-1015346516807929927"] [class*="embedWrapper__"] {
+  border: 4px solid;
+  border-radius: 10px !important;
+}
+
+[data-list-item-id*="chat-messages___chat-messages-1015346516807929927"] {
+  border: 4px solid;
+  border-color: #FFA726;
+}
+
+[data-list-item-id*="chat-messages___chat-messages-1015346516807929927"] [class*="contents_"] {
+  display: none;
+}
+
 .theme-dark [data-list-item-id="channels___1014801129361641562"][aria-label*="channel"] [aria-label*="icon"] svg,
 .theme-dark [data-list-item-id="channels___1014801129361641562"][aria-label*="канал"] [aria-label*="icon"] svg {
   color: rgba(0, 0, 0, 0);
