--- a/default.scss
+++ b/default.scss
@@ -66,37 +66,42 @@
     border: 4px solid;
 }
 
-// rules
+// info
 
-[data-list-item-id*="chat-messages___chat-messages-1015346516807929927"] [class*="embedWrapper__"] [href] span {
-    color: #FFA726;
-}
-
-[data-list-item-id*="chat-messages___chat-messages-1015346516807929927"][class*="cozy_"] {
-    padding: 0px !important;
-}
-
-[data-list-item-id*="chat-messages___chat-messages-1015346516807929927"] [class*="container__"] {
-    padding: 10px !important;
-    grid-row-gap: 10px !important;
-}
-
-[data-list-item-id*="chat-messages___chat-messages-1015346516807929927"] [class*="embedWrapper__"] {
-    border: 4px solid;
-    border-radius: 10px !important;
-}
-
-[data-list-item-id*="chat-messages___chat-messages-1015346516807929927"] {
+[data-list-item-id*="chat-messages___chat-messages-1015346516807929927"][class*="cozy_"],
+[data-list-item-id*="chat-messages___chat-messages-1166732314349404291"][class*="cozy_"],
+[data-list-item-id*="chat-messages___chat-messages-1015573724931563540"][class*="cozy_"],
+[data-list-item-id*="chat-messages___chat-messages-1223786586207031326"][class*="cozy_"] {
     border: 4px solid;
     border-color: #FFA726;
     border-radius: 20px !important;
+    padding: 0px !important;
+    margin-top: 10px;
+
+    [class*="embedWrapper__"] [href] span {
+        color: #FFA726;
+    }
+
+    [class*="container__"] {
+        padding: 10px !important;
+        grid-row-gap: 10px !important;
+    }
+
+    [class*="embedWrapper__"]:not([class*="imageContent__"]) {
+        border: 4px solid;
+        border-radius: 10px !important;
+        border-color: #FFA726;
+    }
+
+    [class*="contents_"] {
+        display: none;
+    }
 }
 
-[id*="chat-messages-1015346516807929927"] {
-  margin-left: 20px;
-  margin-right: 20px;
-}
-
-[data-list-item-id*="chat-messages___chat-messages-1015346516807929927"] [class*="contents_"] {
-    display: none;
+[id*="chat-messages-1015346516807929927"],
+[id*="chat-messages-1166732314349404291"],
+[id*="chat-messages-1015573724931563540"],
+[id*="chat-messages-1223786586207031326"] {
+    margin-left: 20px;
+    margin-right: 20px;
 }
