--- a/theme.css
+++ b/theme.css
@@ -62,37 +62,54 @@
   border: 4px solid;
 }
 
-[data-list-item-id*="chat-messages___chat-messages-1015346516807929927"] [class*="embedWrapper__"] [href] span {
+[data-list-item-id*="chat-messages___chat-messages-1015346516807929927"][class*="cozy_"],
+[data-list-item-id*="chat-messages___chat-messages-1166732314349404291"][class*="cozy_"],
+[data-list-item-id*="chat-messages___chat-messages-1015573724931563540"][class*="cozy_"],
+[data-list-item-id*="chat-messages___chat-messages-1223786586207031326"][class*="cozy_"] {
+  border: 4px solid;
+  border-color: #FFA726;
+  border-radius: 20px !important;
+  padding: 0px !important;
+  margin-top: 10px;
+}
+
+[data-list-item-id*="chat-messages___chat-messages-1015346516807929927"][class*="cozy_"] [class*="embedWrapper__"] [href] span,
+[data-list-item-id*="chat-messages___chat-messages-1166732314349404291"][class*="cozy_"] [class*="embedWrapper__"] [href] span,
+[data-list-item-id*="chat-messages___chat-messages-1015573724931563540"][class*="cozy_"] [class*="embedWrapper__"] [href] span,
+[data-list-item-id*="chat-messages___chat-messages-1223786586207031326"][class*="cozy_"] [class*="embedWrapper__"] [href] span {
   color: #FFA726;
 }
 
-[data-list-item-id*="chat-messages___chat-messages-1015346516807929927"][class*="cozy_"] {
-  padding: 0px !important;
-}
-
-[data-list-item-id*="chat-messages___chat-messages-1015346516807929927"] [class*="container__"] {
+[data-list-item-id*="chat-messages___chat-messages-1015346516807929927"][class*="cozy_"] [class*="container__"],
+[data-list-item-id*="chat-messages___chat-messages-1166732314349404291"][class*="cozy_"] [class*="container__"],
+[data-list-item-id*="chat-messages___chat-messages-1015573724931563540"][class*="cozy_"] [class*="container__"],
+[data-list-item-id*="chat-messages___chat-messages-1223786586207031326"][class*="cozy_"] [class*="container__"] {
   padding: 10px !important;
   grid-row-gap: 10px !important;
 }
 
-[data-list-item-id*="chat-messages___chat-messages-1015346516807929927"] [class*="embedWrapper__"] {
+[data-list-item-id*="chat-messages___chat-messages-1015346516807929927"][class*="cozy_"] [class*="embedWrapper__"]:not([class*="imageContent__"]),
+[data-list-item-id*="chat-messages___chat-messages-1166732314349404291"][class*="cozy_"] [class*="embedWrapper__"]:not([class*="imageContent__"]),
+[data-list-item-id*="chat-messages___chat-messages-1015573724931563540"][class*="cozy_"] [class*="embedWrapper__"]:not([class*="imageContent__"]),
+[data-list-item-id*="chat-messages___chat-messages-1223786586207031326"][class*="cozy_"] [class*="embedWrapper__"]:not([class*="imageContent__"]) {
   border: 4px solid;
   border-radius: 10px !important;
-}
-
-[data-list-item-id*="chat-messages___chat-messages-1015346516807929927"] {
-  border: 4px solid;
   border-color: #FFA726;
-  border-radius: 20px !important;
 }
 
-[id*="chat-messages-1015346516807929927"] {
+[data-list-item-id*="chat-messages___chat-messages-1015346516807929927"][class*="cozy_"] [class*="contents_"],
+[data-list-item-id*="chat-messages___chat-messages-1166732314349404291"][class*="cozy_"] [class*="contents_"],
+[data-list-item-id*="chat-messages___chat-messages-1015573724931563540"][class*="cozy_"] [class*="contents_"],
+[data-list-item-id*="chat-messages___chat-messages-1223786586207031326"][class*="cozy_"] [class*="contents_"] {
+  display: none;
+}
+
+[id*="chat-messages-1015346516807929927"],
+[id*="chat-messages-1166732314349404291"],
+[id*="chat-messages-1015573724931563540"],
+[id*="chat-messages-1223786586207031326"] {
   margin-left: 20px;
   margin-right: 20px;
-}
-
-[data-list-item-id*="chat-messages___chat-messages-1015346516807929927"] [class*="contents_"] {
-  display: none;
 }
 
 .theme-dark [data-list-item-id="channels___1014801129361641562"][aria-label*="channel"] [aria-label*="icon"] svg,
