--- a/template-noname.scss
+++ b/template-noname.scss
@@ -1,13 +1,13 @@
 .theme-dark {
 
-    [data-list-item-id="channels___<id>"][aria-label*="channel)"] div[class^="name__"],
-    [data-list-item-id="channels___<id>"][aria-label*="канал"] div[class^="name__"] {
+    [data-list-item-id="channels___<id>"][aria-label*="channel)"] div[class*="name_"],
+    [data-list-item-id="channels___<id>"][aria-label*="канал"] div[class*="name_"] {
         color: <color>;
     }
 
 
-    [data-list-item-id="channels___<id>"][aria-label*="category"] div[class^="overflow__"],
-    [data-list-item-id="channels___<id>"][aria-label*="категория"] div[class^="overflow__"] {
+    [data-list-item-id="channels___<id>"][aria-label*="category"] div[class*="overflow_"],
+    [data-list-item-id="channels___<id>"][aria-label*="категория"] div[class*="overflow_"] {
         color: <color>;
     }
 }
