--- a/theme.css
+++ b/theme.css
@@ -72,17 +72,17 @@
   color: #FFA726;
 }
 
-[data-list-item-id*="chat-messages___chat-messages-1015346516807929927"][class*="cozy_"] [class*="container__"],
-[data-list-item-id*="chat-messages___chat-messages-1166732314349404291"][class*="cozy_"] [class*="container__"],
-[data-list-item-id*="chat-messages___chat-messages-1015573724931563540"][class*="cozy_"] [class*="container__"],
-[data-list-item-id*="chat-messages___chat-messages-1223786586207031326"][class*="cozy_"] [class*="container__"] {
+[data-list-item-id*="chat-messages___chat-messages-1015346516807929927"][class*="cozy_"] [class*="container_"],
+[data-list-item-id*="chat-messages___chat-messages-1166732314349404291"][class*="cozy_"] [class*="container_"],
+[data-list-item-id*="chat-messages___chat-messages-1015573724931563540"][class*="cozy_"] [class*="container_"],
+[data-list-item-id*="chat-messages___chat-messages-1223786586207031326"][class*="cozy_"] [class*="container_"] {
   grid-row-gap: 10px !important;
 }
 
-[data-list-item-id*="chat-messages___chat-messages-1015346516807929927"][class*="cozy_"] [class*="embedWrapper_"]:not([class*="imageContent__"]),
-[data-list-item-id*="chat-messages___chat-messages-1166732314349404291"][class*="cozy_"] [class*="embedWrapper_"]:not([class*="imageContent__"]),
-[data-list-item-id*="chat-messages___chat-messages-1015573724931563540"][class*="cozy_"] [class*="embedWrapper_"]:not([class*="imageContent__"]),
-[data-list-item-id*="chat-messages___chat-messages-1223786586207031326"][class*="cozy_"] [class*="embedWrapper_"]:not([class*="imageContent__"]) {
+[data-list-item-id*="chat-messages___chat-messages-1015346516807929927"][class*="cozy_"] [class*="embedWrapper_"]:not([class*="imageContent_"]),
+[data-list-item-id*="chat-messages___chat-messages-1166732314349404291"][class*="cozy_"] [class*="embedWrapper_"]:not([class*="imageContent_"]),
+[data-list-item-id*="chat-messages___chat-messages-1015573724931563540"][class*="cozy_"] [class*="embedWrapper_"]:not([class*="imageContent_"]),
+[data-list-item-id*="chat-messages___chat-messages-1223786586207031326"][class*="cozy_"] [class*="embedWrapper_"]:not([class*="imageContent_"]) {
   border: 4px solid;
   border-radius: 10px !important;
   border-color: #FFA726;
